# demos-cours

./: .gitignore  Dockerfile.mariaDb  Dockerfile.mariadb  README.md  docker-compose.yml
backends/: README.md  docker-compose.nodejs.yml  docker-compose.rust-rocket.yml  docker-compose.rust.yml  nginx.conf
backends/nodejs/: Dockerfile  package.json
backends/rust/: Cargo.toml  Dockerfile
backends/rust-rocket/: Cargo.toml  Dockerfile  Rocket.toml
backends/test-frontend/: index.html  script.js
context/: Dockerfile.mariaDb
db/: 420-149.sql  BdFleurs.sql  BdPrintemps.sql  articles.sql
exercices/gabarit/: texte.css
exercices/ventes-garages/: main.css
formulaires-html/: index.php  style-formulaire-simple.css
frontend/reactjs/: package-lock.json  package.json  webpack.config.js
frontend/reactts/: package-lock.json  package.json  webpack.config.js
html-css-basic/: gabarit2.html
introduction/: docker-compose.yaml
introduction/site/: index.html  index.php  listes.js  tableau.php
javascript/: date.html  date.js  dom3p1.html  dom3p1.js  fibo.htm  fibo.js  listeDates.html  math.html
javascript/demo-formulaire-dynamique/: index.html
jwt-example/: Dockerfile  README.md  package-lock.json  package.json  private.key  public.key  webpack.config.js
positionnement/: boite-html.html
recuperation-fichiers/: Authentification.static.php
rust/validation-cookies/backend/: Cargo.toml  Dockerfile
rust/validation-cookies/backend/src/: main.rs
sln-navigation-site-web/: gabarit1.html  index.html  produits.html  readme.txt
src/: index.php
(+289 files in other folders)
